Visit Planning/src/objects/Visit_Planning_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Lookup_Field_Name__c</fullName>
        <label>Lookup Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Label__c</fullName>
        <label>Object Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Visit Planning Settings</label>
</CustomObject>